Update Post “2019-02-18-test-2”

--- a/_posts/2019-02-18-test-2.md
+++ b/_posts/2019-02-18-test-2.md
@@ -1,6 +1,8 @@
 ---
 title: Test 2
 date: '2019-02-18 17:36'
-image: 'https://ucarecdn.com/7a04d596-3675-41d9-aec0-40c6d235589e/'
+image:
+  - >-
+    https://ucarecdn.com/25d518ed-b98e-4bd6-be68-13ef1ed3e6f4/-/preview/wallhaven-498618.jpg
 ---
 TEst 2
